testsuite/tests/typecheck/should_fail/tcfail225.stderr

tcfail225.hs:9:19: error:
    • Expected kind ‘k -> *’, but ‘Maybe’ has kind ‘* -> *’
    • In the first argument of ‘T’, namely ‘Maybe’
      In the type ‘T Maybe (m a)’
      In the definition of data constructor ‘MkT’
